# mr

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  log4rs.yml  my-test-mr.sh  test-many.sh  test-mr.sh  test-single.sh
app_crash/: Cargo.toml
app_crash/src/: lib.rs
app_early_exit/: Cargo.toml
app_early_exit/src/: lib.rs
app_indexer/: Cargo.toml
app_indexer/src/: lib.rs
app_jobcount/: Cargo.toml
app_jobcount/src/: lib.rs
app_wc/: Cargo.toml
app_wc/src/: lib.rs
apps/: wc.rs
common/: Cargo.toml
common/src/: lib.rs
distributed/: Cargo.toml
distributed/proto/: service.proto
distributed/src/: lib.rs
sequential/: Cargo.toml
sequential/src/: main.rs
src/: apps.rs
tests/: test-mr.sh
xxxxx/: apps.rs  lib.rs
