[package]
name = "distributed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
prost = "0.11.9"
tokio = { version = "1.9.0", features = ["full"] }
tonic = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3.17", features = ["time","local-time"]}
dashmap = "5.4.0"
clap = {version = "4.2.7", features = ["derive"]}
crossbeam-queue = "0.3.8"
futures = "0.3"
tracing-appender = "0.2.2"
itertools = "0.10.5"
time = { version = "0.3.2", features = ["macros"]}
[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[build-dependencies]
tonic-build = "0.9"
